fix: attribute links contrast

--- a/style.css
+++ b/style.css
@@ -107,5 +107,5 @@ body {
   text-align: center;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--white);
 }
